--- a/02_scripts/02_Fig1_Flowchart.Rmd
+++ b/02_scripts/02_Fig1_Flowchart.Rmd
@@ -3,14 +3,12 @@ title: "02_Fig1_Flowchart"
 output: html_document
 date: "2024-01-11"
 ---
-
+# PRISMA mit fertiger Funktion -> nicht sinnvoll
 ```{r }
 # ggplot bauen aus eigenem Datensatz 
 # datensatz mit pfeilen 
 #größe rausfinden
 # oder kein prisma sondern nur flowchart 
-
-
 
 #install.packages("PRISMAstatement")
 library(PRISMAstatement)
@@ -37,5 +35,168 @@ prisma(2626, 0, 2626, 1911, 1827, 84, 3, 81, 81)
 #incl gesamt 81
 
 
+
+```
+
+
+# PRISMA flowchart
+```{r }
+#install.packages("Gmisc")
+#install.packages("glue")
+#install.packages("htmlTable")
+#install.packages("grid")
+#install.packages("magrittr")
+
+
+library(Gmisc, quietly = TRUE)
+library(glue)
+library(htmlTable)
+library(grid)
+library(magrittr)
+
+org_cohort <- boxGrob(glue("Records identified through database searching (Medline (Ovid) and Embase",
+                           "n = {pop}",
+                           pop = txtInt(2626),
+                           .sep = "\n"))
+eligible <- boxGrob(glue("eligible",
+                          "n = {pop}",
+                           pop = txtInt(1911),
+                           .sep = "\n"))
+included <- boxGrob(glue("included after power analysis",
+                         "n = {incl}",
+                         incl = txtInt(87),
+                         .sep = "\n"))
+grp_a <- boxGrob(glue("Inlcuded in Metaanlysis",
+                      "n = {recr}",
+                      recr = txtInt(84),
+                      .sep = "\n"))
+
+grp_b <- boxGrob(glue("Excluded",
+                      "n = {recr}",
+                      recr = txtInt(3),
+                      .sep = "\n"))
+# not employed as self-reports, publication not in English/German).
+excluded <- boxGrob(glue("Excluded (n = {tot}):",
+                         " - not two depression measures included: {nottwo}",
+                         " - not assessed at the same time: {time}",
+                         " - not assessed in the same sample: {sample}",
+                         " - not referring to current depression severity: {severity}",
+                         " - not employed as self-reports: {notselfreports}",
+                         " - publication not in English/German: {language}",
+                         tot = 1827,
+                         nottwo = 99,
+                         time = 99,
+                         sample = 99,
+                         severity = 99,
+                         notselfreports = 99,
+                         language = 99,
+
+                         .sep = "\n"),
+                    just = "left")
+
+grid.newpage()
+vert <- spreadVertical(org_cohort,
+                       eligible = eligible,
+                       included = included,
+                       grps = grp_a)
+grps <- alignVertical(reference = vert$grps,
+                      grp_a, grp_b) %>%
+  spreadHorizontal()
+vert$grps <- NULL
+
+excluded <- moveBox(excluded,
+                    x = 0.8,
+                    y = coords(vert$included)$top + distance(vert$eligible, vert$included, half = TRUE, center = FALSE))
+
+for (i in 1:(length(vert) - 1)) {
+  connectGrob(vert[[i]], vert[[i + 1]], type = "vert") %>%
+    print
+}
+connectGrob(vert$included, grps[[1]], type = "N")
+connectGrob(vert$included, grps[[2]], type = "N")
+
+connectGrob(vert$eligible, excluded, type = "L")
+
+# Print boxes
+vert
+grps
+excluded
+
+
+# ... (previous code remains the same)
+
+# Load the gridExtra package
+library(gridExtra)
+library(ggplot2)
+
+```
+
+```{r}
+
+
+library(Gmisc, quietly = TRUE)
+library(glue)
+library(htmlTable)
+library(grid)
+library(magrittr)
+
+org_cohort <- boxGrob(glue("Stockholm population",
+                           "n = {pop}",
+                           pop = txtInt(1632798),
+                           .sep = "\n"))
+eligible <- boxGrob(glue("Eligible",
+                          "n = {pop}",
+                           pop = txtInt(10032),
+                           .sep = "\n"))
+included <- boxGrob(glue("Randomized",
+                         "n = {incl}",
+                         incl = txtInt(122),
+                         .sep = "\n"))
+grp_a <- boxGrob(glue("Treatment A",
+                      "n = {recr}",
+                      recr = txtInt(43),
+                      .sep = "\n"))
+
+grp_b <- boxGrob(glue("Treatment B",
+                      "n = {recr}",
+                      recr = txtInt(122 - 43 - 30),
+                      .sep = "\n"))
+
+excluded <- boxGrob(glue("Excluded (n = {tot}):",
+                         " - not interested: {uninterested}",
+                         " - contra-indicated: {contra}",
+                         tot = 30,
+                         uninterested = 12,
+                         contra = 30 - 12,
+                         .sep = "\n"),
+                    just = "left")
+
+grid.newpage()
+vert <- spreadVertical(org_cohort,
+                       eligible = eligible,
+                       included = included,
+                       grps = grp_a)
+grps <- alignVertical(reference = vert$grps,
+                      grp_a, grp_b) %>%
+  spreadHorizontal()
+vert$grps <- NULL
+
+excluded <- moveBox(excluded,
+                    x = .8,
+                    y = coords(vert$included)$top + distance(vert$eligible, vert$included, half = TRUE, center = FALSE))
+
+for (i in 1:(length(vert) - 1)) {
+  connectGrob(vert[[i]], vert[[i + 1]], type = "vert") %>%
+    print
+}
+connectGrob(vert$included, grps[[1]], type = "N")
+connectGrob(vert$included, grps[[2]], type = "N")
+
+connectGrob(vert$eligible, excluded, type = "L")
+
+# Print boxes
+vert
+grps
+excluded
 
 ```
