--- a/02_scripts/04_Fig2_Plots.Rmd
+++ b/02_scripts/04_Fig2_Plots.Rmd
@@ -19,8 +19,6 @@ BDIxPHQ <- left_join(SUBSET_BDI, SUBSET_PHQ, by = c("Study", "Variable")) %>%
 BDIxPROMIS <- left_join(SUBSET_BDI, SUBSET_PROMIS, by = c("Study", "Variable")) %>%
   filter(complete.cases(BDI, PROMIS))
 
-
-
 CESDxHADS <- left_join(SUBSET_CESD, SUBSET_HADS, by = c("Study", "Variable")) %>%
   filter(complete.cases(CESD, HADS))
 
@@ -30,117 +28,83 @@ CESDxPHQ <- left_join(SUBSET_CESD, SUBSET_PHQ, by = c("Study", "Variable")) %>%
 CESDxPROMIS <- left_join(SUBSET_CESD, SUBSET_PROMIS, by = c("Study", "Variable")) %>%
   filter(complete.cases(CESD, PROMIS))
 
-
-
 HADSxPHQ <- left_join(SUBSET_HADS, SUBSET_PHQ, by = c("Study", "Variable")) %>%
   filter(complete.cases(HADS, PHQ))
 
 HADSxPROMIS <- left_join(SUBSET_HADS, SUBSET_PROMIS, by = c("Study", "Variable")) %>%
   filter(complete.cases(HADS, PROMIS))
 
-
 PHQxPROMIS <- left_join(SUBSET_PHQ, SUBSET_PROMIS, by = c("Study", "Variable")) %>%
   filter(complete.cases(PHQ, PROMIS))
 
-
 ```
 
-# Vorbereitung Plot mit facets: Datensatz zu einem großen mergen
+# Vorbereitung Plot mit facets: Datensatz benennen und Fragebogenkombination als Spalte hinzufügen
 
 ```{r }
-# einen Datensatz aus allen erstellen mit Wert 1 und Wert 2 und einer Zeile der Fragebogenkombination 
 
 BDIxCESD_short <- BDIxCESD %>%
   mutate(`Wert 1` = `BDI - PROMIS Skala`,
          `Wert 2` = `CESD - PROMIS Skala`,
          `Fragebogenkombination` = "BDIxCESD")
-#write.csv(BDIxCESD_short, "BDIxCESD_short.csv", row.names = FALSE)
-
 
 BDIxHADS_short <- BDIxHADS %>%
   mutate(`Wert 1` = `BDI - PROMIS Skala`,
          `Wert 2` = `HADS - PROMIS Skala`,
          `Fragebogenkombination` = "BDIxHADS")
-#write.csv(BDIxHADS_short, "BDIxHADS_short.csv", row.names = FALSE)
-
 
 BDIxPHQ_short <- BDIxPHQ %>%
   mutate(`Wert 1` = `BDI - PROMIS Skala`,
          `Wert 2` = `PHQ - PROMIS Skala`,
          `Fragebogenkombination` = "BDIxPHQ")
-#write.csv(BDIxPHQ_short, "BDIxPHQ_short.csv", row.names = FALSE)
-
-
 
 BDIxPROMIS_short <- BDIxPROMIS %>%
   mutate(`Wert 1` = `BDI - PROMIS Skala`,
          `Wert 2` = `PROMIS`,
          `Fragebogenkombination` = "BDIxPROMIS")
-#write.csv(BDIxPROMIS_short, "BDIxPROMIS_short.csv", row.names = FALSE)
-
-
 
 CESDxHADS_short <- CESDxHADS %>%
   mutate(`Wert 1` = `CESD - PROMIS Skala`,
          `Wert 2` = `HADS - PROMIS Skala`,
          `Fragebogenkombination` = "CESDxHADS")
-#write.csv(CESDxHADS_short, "CESDxHADS_short.csv", row.names = FALSE)
-
 
 CESDxPHQ_short  <- CESDxPHQ %>%
   mutate(`Wert 1` = `CESD - PROMIS Skala`,
          `Wert 2` = `PHQ - PROMIS Skala`,
          `Fragebogenkombination` = "CESDxPHQ")
-#write.csv(CESDxPHQ_short, "CESDxPHQ_short.csv", row.names = FALSE)
-
 
 CESDxPROMIS_short  <- CESDxPROMIS %>%
   mutate(`Wert 1` = `CESD - PROMIS Skala`,
          `Wert 2` = `PROMIS`,
          `Fragebogenkombination` = "CESDxPROMIS")
-#write.csv(CESDxPROMIS_short, "CESDxPROMIS_short.csv", row.names = FALSE)
-
-
-
 
 HADSxPHQ_short  <- HADSxPHQ %>%
   mutate(`Wert 1` = `HADS - PROMIS Skala`,
          `Wert 2` = `PHQ - PROMIS Skala`,
          `Fragebogenkombination` = "HADSxPHQ")
-#write.csv(HADSxPHQ_short, "HADSxPHQ_short.csv", row.names = FALSE)
-
 
 HADSxPROMIS_short <- HADSxPROMIS %>%
   mutate(`Wert 1` = `HADS - PROMIS Skala`,
          `Wert 2` = `PROMIS`,
          `Fragebogenkombination` = "HADSxPROMIS")
-#write.csv(HADSxPROMIS_short, "HADSxPROMIS_short.csv", row.names = FALSE)
-
-
 
 PHQxPROMIS_short <- PHQxPROMIS %>%
   mutate(`Wert 1` = `PHQ - PROMIS Skala`,
          `Wert 2` = `PROMIS`,
          `Fragebogenkombination` = "PHQxPROMIS")
-#write.csv(PHQxPROMIS_short, "PHQxPROMIS_short.csv", row.names = FALSE)
-
-
-
 
 ```
 
 
 
-# Plot einzeln
+# Scatterplots einzeln über alle Fragebogenkombinationen
 ```{r }
 library(ggplot2)
 #install.packages("hrbrthemes")
 library(hrbrthemes)
 
 # BDIxCESD
-
-BDIxCESD$groupsize.y <- as.numeric(as.character(BDIxCESD$groupsize.y))  # Um sicherzustellen, dass es numerisch ist
-
+BDIxCESD$groupsize.y <- as.numeric(as.character(BDIxCESD$groupsize.y)) 
 BDIxCESD_plot<- ggplot(BDIxCESD, aes(x = `BDI - PROMIS Skala`, y = `CESD - PROMIS Skala`)) + 
   geom_point(aes(size = groupsize.y)) +
   geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
@@ -149,14 +113,9 @@ BDIxCESD_plot<- ggplot(BDIxCESD, aes(x = `BDI - PROMIS Skala`, y = `CESD - PROMI
   labs(size = "Gruppengröße") +  # Hier wird der Name der Punktgröße geändert
   theme_ipsum()
 
-#ggsave("BDIxCESD_plot.png", plot = BDIxCESD_plot, device = "png", width = 6, height = 4, units = "in")
-
-
 
 # BDIxHADS
-
-BDIxHADS$groupsize.y <- as.numeric(as.character(BDIxHADS$groupsize.y))  # Um sicherzustellen, dass es numerisch ist
-
+BDIxHADS$groupsize.y <- as.numeric(as.character(BDIxHADS$groupsize.y))  
 BDIxHADS_plot<- ggplot(BDIxHADS, aes(x = `BDI - PROMIS Skala`, y = `HADS - PROMIS Skala`)) + 
   geom_point(aes(size = groupsize.y)) +
   geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
@@ -165,46 +124,31 @@ BDIxHADS_plot<- ggplot(BDIxHADS, aes(x = `BDI - PROMIS Skala`, y = `HADS - PROMI
   labs(size = "Gruppengröße") +  # Hier wird der Name der Punktgröße geändert
   theme_ipsum()
   
-#ggsave("BDIxHADS_plot.png", plot = BDIxHADS_plot, device = "png", width = 6, height = 4, units = "in")
-
   
 #BDIxPHQ
-
 BDIxPHQ$groupsize.y <- as.numeric(as.character(BDIxPHQ$groupsize.y))  
-
 BDIxPHQ_plot<- ggplot(BDIxPHQ, aes(x = `BDI - PROMIS Skala`, y = `PHQ - PROMIS Skala`)) + 
   geom_point(aes(size = groupsize.y)) +
   geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
   xlim(40, 90) +
   ylim(40, 90) +
-  labs(size = "Gruppengröße") +  # Hier wird der Name der Punktgröße geändert
+  labs(size = "Gruppengröße") + 
   theme_ipsum()
-
-#ggsave("BDIxPHQ_plot.png", plot = BDIxPHQ_plot, device = "png", width = 6, height = 4, units = "in")
-
 
 
 # BDIxPROMIS
-
-BDIxPROMIS$groupsize.y <- as.numeric(as.character(BDIxPROMIS$groupsize.y))  # Um sicherzustellen, dass es numerisch ist
-
-# ggplot-Befehl für BDIxPROMIS
+BDIxPROMIS$groupsize.y <- as.numeric(as.character(BDIxPROMIS$groupsize.y))  
 BDIxPROMIS_plot <- ggplot(BDIxPROMIS, aes(x = `BDI - PROMIS Skala`, y = `PROMIS`)) + 
   geom_point(aes(size = groupsize.y)) +
   geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
   xlim(40, 90) +
   ylim(40, 90) +
-  labs(size = "Gruppengröße") +  # Hier wird der Name der Punktgröße geändert
+  labs(size = "Gruppengröße") +  
   theme_ipsum()
-
-#ggsave("BDIxPROMIS_plot.png", plot = BDIxPROMIS_plot, device = "png", width = 6, height = 4, units = "in")
-
 
 
 #CESDxHADS
-
 CESDxHADS$groupsize.y <- as.numeric(as.character(CESDxHADS$groupsize.y))  
-
 CESDxHADS_plot <- ggplot(CESDxHADS, aes(x = `CESD - PROMIS Skala`, y = `HADS - PROMIS Skala`)) + 
   geom_point(aes(size = groupsize.y)) +
   geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
@@ -213,30 +157,20 @@ CESDxHADS_plot <- ggplot(CESDxHADS, aes(x = `CESD - PROMIS Skala`, y = `HADS - P
   labs(size = "Gruppengröße") +
   theme_ipsum()
 
-#ggsave("CESDxHADS_plot.png", plot = CESDxHADS_plot, device = "png", width = 6, height = 4, units = "in")
 
-
-
-
+#CESDxPHQ
 CESDxPHQ$groupsize.y <- as.numeric(as.character(CESDxPHQ$groupsize.y))  
-
 CESDxPHQ_plot <- ggplot(CESDxPHQ, aes(x = `CESD - PROMIS Skala`, y = `PHQ - PROMIS Skala`)) + 
   geom_point(aes(size = groupsize.y)) +
   geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
   xlim(40, 90) +
   ylim(40, 90) +
   labs(size = "Gruppengröße") +
-  scale_size_continuous(
-    breaks = seq(20, 500, by = 50),  # Set breaks from 20 to 500 in increments of 50
-    labels = seq(20, 500, by = 50)   # Set labels accordingly
-  ) +
   theme_ipsum()
 
-#ggsave("CESDxPHQ_plot.png", plot = CESDxPHQ_plot, device = "png", width = 6, height = 4, units = "in")
 
-
+#PHQxPROMIS
 PHQxPROMIS$groupsize.y <- as.numeric(as.character(PHQxPROMIS$groupsize.y))  
-
 PHQxPROMIS_plot <- ggplot(PHQxPROMIS, aes(x = `PHQ - PROMIS Skala`, y = `PROMIS`)) + 
   geom_point(aes(size = groupsize.y)) +
   geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
@@ -245,15 +179,8 @@ PHQxPROMIS_plot <- ggplot(PHQxPROMIS, aes(x = `PHQ - PROMIS Skala`, y = `PROMIS`
   labs(size = "Gruppengröße") +
   theme_ipsum()
 
-#ggsave("PHQxPROMIS_plot.png", plot = PHQxPROMIS_plot, device = "png", width = 6, height = 4, units = "in")
-
-
-# HADSxPROMIS, BDIxPROMIS, CESDxPROMIS zu klein
-
-## Gruppengröße einheitlich plotten und dann übersichtsplot
-
+#HADSxPHQ
 HADSxPHQ$groupsize.y <- as.numeric(as.character(HADSxPHQ$groupsize.y))  
-
 HADSxPHQ_plot <- ggplot(HADSxPHQ, aes(x = `HADS - PROMIS Skala`, y = `PHQ - PROMIS Skala`)) + 
   geom_point(aes(size = groupsize.y)) +
   geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
@@ -261,13 +188,51 @@ HADSxPHQ_plot <- ggplot(HADSxPHQ, aes(x = `HADS - PROMIS Skala`, y = `PHQ - PROM
   ylim(40, 90) +
   labs(size = "Gruppengröße") +
   theme_ipsum()
+  
+
+```
 
 
-#ggsave("HADSxPHQ_plot.png", plot = HADSxPHQ_plot, device = "png", width = 6, height = 4, units = "in")
 
-  
-  
-  
+# einen facetted Plot plotten 
+
+```{r}
+
+# dafür hab ich händisch eine Tabelle erstellt
+
+dat_short <- read_excel("~/Library/Mobile Documents/com~apple~CloudDocs/Documents/2023/CPCOR/Git/MetaanalysisCommonMetrics/01_data/dat_short.xlsx", 
+    skip = 1)
+
+dat_short <- dat_short %>%
+  rename(Wert_1 = "Wert 1")
+
+dat_short <- dat_short %>%
+  rename(Wert_2 = "Wert 2")
+
+p<- ggplot (data=dat_short, aes_string(x='Wert_2', y= 'Wert_1')) + geom_point(aes(size = Groupsize))
+p+facet_wrap(~Fragebogenkombination)
+
+
+# design
+
+library(ggplot2)
+
+p <- ggplot(data = dat_short, aes(x = Wert_2, y = Wert_1)) +
+  geom_point(aes(size = Groupsize, color = ifelse(is.na(Groupsize), "blue", "black"))) +
+  geom_smooth(method = "lm", color = "red", size = 0.5, fill = "#69b3a2", se = TRUE) +
+  labs(size = "Gruppengröße") +
+  scale_size_continuous(range = c(0, 5), breaks = seq(10, 3700, by = 1000)) +
+  scale_color_identity()
+
+# Print the plot
+print(p)
+
+Scatterplots <- p+facet_wrap(~Fragebogenkombination)
+
+# Save the plot as a PNG file
+ggsave("Scatterplots.png", Scatterplots, width = 10, height = 6, units = "in")
+
+
 
 ```
 
@@ -275,8 +240,8 @@ HADSxPHQ_plot <- ggplot(HADSxPHQ, aes(x = `HADS - PROMIS Skala`, y = `PHQ - PROM
 
 # Blant Altman Plot einzeln 
 
-
 ```{r }
+# Mittelwertlinie gewichten 
 
 if (!require(blandr)) {
   install.packages("blandr")
@@ -293,9 +258,7 @@ BDIxCESD_BA_plot <- BDIxCESD_BA_plot +
   ylim(-15, 25)
 
 
-
 # BDIxHADS
-
 BDIxHADS_BA_plot <- blandr.draw(BDIxHADS$'BDI - PROMIS Skala', BDIxHADS$'HADS - PROMIS Skala')
 BDIxHADS_BA_plot <- BDIxHADS_BA_plot +
   theme(text = element_text(size = 6)) +
@@ -337,7 +300,6 @@ CESDxHADS_BA_plot <- blandr.draw(CESDxHADS$'CESD - PROMIS Skala', CESDxHADS$'HAD
 
 
 
-
 # CESDxPHQ
 
 CESDxPHQ_BA_plot <- blandr.draw(CESDxPHQ$'CESD - PROMIS Skala', CESDxPHQ$'PHQ - PROMIS Skala') +
@@ -351,10 +313,7 @@ CESDxPHQ_BA_plot <- blandr.draw(CESDxPHQ$'CESD - PROMIS Skala', CESDxPHQ$'PHQ - 
 
 # CESDxPROMIS
 
-CESDxPROMIS_BA_plot <- blandr.draw(
-  CESDxPROMIS$'CESD - PROMIS Skala', 
-  CESDxPROMIS$'PROMIS'
-) +
+CESDxPROMIS_BA_plot <- blandr.draw(CESDxPROMIS$'CESD - PROMIS Skala', CESDxPROMIS$'PROMIS') +
   theme(text = element_text(size = 6)) +
   labs(title = "CESDxPROMIS") +
   xlim(40, 80) +
@@ -388,59 +347,65 @@ PHQxPROMIS_BA_plot <- blandr.draw(
 
 
 
-
-# HADSxPROMIS, BDIxPROMIS, CESDxPROMIS zu klein
-
-
-
 ```
 
-
-
-# einen faceted Plot plotten 
+weighted Bland Altman Plot
 
 ```{r }
 
-# dafür hab ich händisch eine Tabelle erstellt
+method1 <- PHQxPROMIS$'PHQ - PROMIS Skala'
+method2 <- PHQxPROMIS$'PROMIS'
+group_sizes <- PHQxPROMIS$'groupsize.x'
+group_sizes <- as.numeric(group_sizes)
+# Gewichtete Differenzen berechnen
 
-dat_short <- read_excel("dat_short.xlsx", 
-    skip = 1)
+weighted_diff <- (method2 - method1) * group_sizes
+weighted_diff<- as.numeric(weighted_diff)
 
-
-p<- ggplot (data=dat_short, aes_string(x='Wert_2', y= 'Wert_1')) + geom_point(aes(size = Groupsize))
-p+facet_wrap(~Fragebogenkombination)
-
-
-# design
-
-
+# Gewichteter Durchschnitt der Differenzen berechnen
+weighted_mean_diff <- sum(weighted_diff) / sum(as.numeric(group_sizes))
 
 
+group_sizes <- as.numeric(group_sizes)
+
+
+# Gewichteter arithmetischer Mittelwert berechnen
+weighted_mean_values <- weighted.mean(cbind(method1, method2), rep(group_sizes, each = 2))
+
+
+# Bland-Altman-Plot erstellen
+library(BlandAltmanLeh)
+bland_altman <- bland.altman.plot(method1, method2, xlab = "Mittelwert", ylab = "Differenz",
+                                  main = "Bland-Altman Plot", col = "blue", pch = 16)
+
+# Hinzufügen des gewichteten Mittelwerts als Linie
+abline(h = weighted_mean_values, col = "red", lty = 2)
+
+# ggplot2-Anpassungen
 library(ggplot2)
+library(ggpubr)
+
+# ggplot2-Objekt erstellen
+bland_altman_gg <- ggplot(as.data.frame(bland_altman$Data), aes(x = weighted_mean_values, y = weighted_diff)) +
+  geom_point(aes(color = group_sizes), size = 2) +
+  geom_hline(yintercept = 0, linetype = "dashed", color = "black", size = 0.5) +
+  geom_abline(intercept = 0, slope = 1, linetype = "dashed", color = "black", size = 0.5) +
+  geom_smooth(method = "loess", se = FALSE, color = "blue", size = 0.7) +
+  labs(title = "PHQxPROMIS", x = "Mittelwert", y = "Differenz") +
+  theme_pubr() +
+  theme(text = element_text(size = 6)) +
+  xlim(40, 80) +
+  ylim(-15, 25)  
+
+# Anzeigen des kombinierten Plots
+print(bland_altman_gg)
 
 
-p <- ggplot(data = dat_short, aes(x = Wert_2, y = Wert_1)) +
-  geom_point(aes(size = Groupsize, color = ifelse(is.na(Groupsize), "blue", "black"))) +
-  geom_smooth(method = "lm", color = "red", size = 0.5, fill = "#69b3a2", se = TRUE) +
-  labs(size = "Gruppengröße") +
-  scale_size_continuous(range = c(0, 5), breaks = seq(10, 3700, by = 1000)) +
-  scale_color_identity()
 
-# Print the plot
-print(p)
-
-
-
-Scatterplots <- p+facet_wrap(~Fragebogenkombination)
-
-# Save the plot as a PNG file
-ggsave("Scatterplots.png", Scatterplots, width = 10, height = 6, units = "in")
 
 
 
 ```
-
-
 
 # Blant Altman Plot alle
 ```{r }
@@ -457,12 +422,12 @@ Blant_plot<- suppressWarnings({
     xlim(40, 80) +
     ylim(-15, 25)
 
-  BDIxHADS_BA_plot <- # Create BDIxHADS_BA_plot similarly with appropriate data and adjustments
-  BDIxPHQ_BA_plot <- # Create BDIxPHQ_BA_plot similarly with appropriate data and adjustments
-  CESDxHADS_BA_plot <- # Create CESDxHADS_BA_plot similarly with appropriate data and adjustments
-  CESDxPHQ_BA_plot <- # Create CESDxPHQ_BA_plot similarly with appropriate data and adjustments
-  PHQxPROMIS_BA_plot <- # Create PHQxPROMIS_BA_plot similarly with appropriate data and adjustments
-  HADSxPHQ_BA_plot <- # Create HADSxPHQ_BA_plot similarly with appropriate data and adjustments
+  BDIxHADS_BA_plot 
+  BDIxPHQ_BA_plot
+  CESDxHADS_BA_plot 
+  CESDxPHQ_BA_plot
+  PHQxPROMIS_BA_plot
+  HADSxPHQ_BA_plot 
 
   grid.arrange(BDIxCESD_BA_plot, BDIxHADS_BA_plot, BDIxPHQ_BA_plot, CESDxHADS_BA_plot, CESDxPHQ_BA_plot, PHQxPROMIS_BA_plot,HADSxPHQ_BA_plot, nrow = 2)
 })
